<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView

        android:layout_width="396dp"
        android:layout_height="303dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/date_text"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="15"
            android:gravity="center|center_horizontal|center_vertical"
            android:hint="@string/date_TXT"
            android:inputType="date|textShortMessage"
            android:singleLine="true"
            android:textIsSelectable="false"
            android:translationX="120dp"
            android:translationY="5dp" />


        <EditText
            android:id="@+id/amount_text"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="15"
            android:hint="@string/amount_TXT"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            android:translationX="20dp"
            android:translationY="-60dp" />

        <EditText
            android:id="@+id/details_text"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Details"
            android:inputType="text|textImeMultiLine"
            android:singleLine="true"
            android:translationX="120dp"
            android:translationY="130dp" />

        <EditText
            android:id="@+id/receipt_text"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Receipt"
            android:inputType="textShortMessage"
            android:singleLine="true"
            android:translationX="120dp"
            android:translationY="190dp" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_btn"
            android:translationX="260sp"
            android:translationY="240dp" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Delete_btn"
            android:translationX="50dp"
            android:translationY="240dp" />

        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Update_btn"
            android:translationX="155dp"
            android:translationY="240dp" />

        <Button
            android:id="@+id/datepicker_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date:"
            android:translationX="22sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Spending:"
            android:textSize="20sp"
            android:translationX="33dp"
            android:translationY="75dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Items:"
            android:textSize="20sp"
            android:translationX="68dp"
            android:translationY="138dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Receipt:"
            android:textSize="20sp"
            android:translationX="52dp"
            android:translationY="200dp" />


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>